--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,255 @@
-/* место для вашего кода */
+.header {
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    align-items: center;
+    padding: 92px 50px 96px;
+}
+
+.header__links-list {
+    display: flex;
+    gap: 25px;
+    list-style: circle;
+    font-size: 18px;
+}
+
+.header__link_active {
+    text-decoration: none;
+}
+
+.header__links-list-item_no-bullit {
+    list-style: none;
+}
+
+.header__address {
+    font-size: 18px;
+    font-style: normal;
+    max-width: 240px;
+    justify-self: end;
+}
+
+.header__logo {
+    display: block;
+}
+
+.header__logo-image {
+    max-width: 129px;
+}
+
+.cover {
+    position: relative;
+    background-image: url("../images/cover.jpg");
+    background-size: cover;
+    background-position: center;
+    z-index: -1;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    z-index: 0;
+}
+
+.cover__title {
+    position: relative;
+    padding: 145px 50px 0;
+    text-transform: uppercase;
+    font-size: 6rem;
+    font-weight: bold;
+    color: #fff;
+    letter-spacing: 25px;
+    line-height: 115%;
+    z-index: 1;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text_center {
+    display: block;
+    justify-self: center;
+}
+
+.aligned-text_right {
+    display: block;
+    justify-self: end;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
+
+.cover__description {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 60px 50px;
+    z-index: 1;
+}
+
+.cover__description-text {
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: normal;
+    word-spacing: 20px;
+    line-height: 28px;
+}
+
+.bet-button {
+    border: 1px solid white;
+    padding: 10px 30px;
+    background: transparent;
+    color: #fff;
+    font-size: 22px;
+    text-transform: uppercase;
+}
+
+.lots {
+    margin-top: 180px;
+}
+.lots__heading {
+    margin-left: 40px;
+    font-size: 40px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.lots__card-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    list-style: none;
+    padding: 0 24px;
+    color: #fff;
+    margin-top: 27px;
+    gap: 25px;
+}
+
+.lots__card-list-item {
+    position: relative;
+}
+
+.card-link {
+    margin: 30px 0 0 64px;
+}
+
+.card {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.card_type_film {
+    background-image: url("/images/card-lot-01.jpg");
+}
+
+.card_type_book {
+    background-image: url("/images/card-lot-02.jpg");
+}
+
+.card_type_picture {
+    background-image: url("/images/card-lot-03.jpg");
+}
+
+.card__title {
+    text-transform: uppercase;
+    font-size: 22px;
+    font-weight: bold;
+    padding: 24px 40px 0 40px;
+    z-index: 1;
+}
+
+.card__text {
+    align-self: flex-end;
+    font-size: 20px;
+    padding: 0 24px 24px 24px;
+    z-index: 1;
+}
+
+.lots__look-more-link {
+    font-size: 20px;
+}
+
+.about {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    margin-top: 120px;
+    padding: 0 48px;
+}
+
+.about__column {
+    position: relative;
+    top: 20%;
+    align-self: center;
+}
+
+.about__logo {
+    display: flex;
+    place-content: center;
+    background: #000;
+    border: none;
+    border-radius: 100%;
+    width: 240px;
+    height: 240px;
+}
+
+.about__logo-image {
+    width: 140px;
+}
+
+.about__title {
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.about__text {
+    font-size: 20px;
+    margin-top: 100px;
+}
+
+.about__text-align {
+    margin-top: 24px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    margin: 180px 0 82px 0;
+}
+
+.footer__address {
+    font-style: normal;
+    font-size: 18px;
+}
+
+.footer__menu {
+    display: flex;
+}
+
+.footer__menu-list {
+    list-style: none;
+    justify-items: center;
+    font-size: 18px;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    display: flex;
+    gap: 48px;
+    list-style: none;
+}
+
+.footer__social-icon {
+    width: 48px;
+}
