--- a/styles/style.css
+++ b/styles/style.css
@@ -1,30 +1,33 @@
+/* Секция HEADER */
 .header {
     display: grid;
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
-    padding: 92px 50px 96px;
+    justify-items: stretch;
+    padding: 93px 0;
+}
+
+.header__menu {
+    padding-left: 50px;
+    padding-right: 43px;
 }
 
 .header__links-list {
     display: flex;
-    gap: 25px;
-    list-style: circle;
+    justify-content: space-between;
     font-size: 18px;
 }
 
-.header__link_active {
-    text-decoration: none;
+.header__links-list-item {
+    list-style: circle;
 }
 
 .header__links-list-item_no-bullit {
     list-style: none;
 }
 
-.header__address {
-    font-size: 18px;
-    font-style: normal;
-    max-width: 240px;
-    justify-self: end;
+.header__link_active {
+    text-decoration: none;
 }
 
 .header__logo {
@@ -32,15 +35,27 @@
 }
 
 .header__logo-image {
-    max-width: 129px;
+    max-width: 135px;
 }
 
+.address {
+    display: block;
+    font-size: 18px;
+    font-style: normal;
+    line-height: 1.4;
+}
+
+.header__address {
+    justify-self: end;
+    padding-right: 85px;
+}
+
+/* Секция ОНО ТЕБЕ НАДО */
 .cover {
     position: relative;
     background-image: url("../images/cover.jpg");
     background-size: cover;
     background-position: center;
-    z-index: -1;
 }
 
 .overlay {
@@ -50,33 +65,34 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 0;
+    z-index: 1;
 }
 
 .cover__title {
     position: relative;
-    padding: 145px 50px 0;
+    padding: 168px 50px 0;
     text-transform: uppercase;
     font-size: 6rem;
     font-weight: bold;
     color: #fff;
-    letter-spacing: 25px;
+    letter-spacing: 35px;
     line-height: 115%;
     z-index: 1;
 }
 
-.aligned-text {
+.cover__title-text {
     display: block;
 }
 
 .aligned-text_center {
-    display: block;
     justify-self: center;
+    margin-top: 23px;
+    margin-left: 43px;
 }
 
 .aligned-text_right {
-    display: block;
     justify-self: end;
+    margin-top: 25px;
 }
 
 .no-letter-spacing {
@@ -88,7 +104,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 60px 50px;
+    padding: 110px 50px 53px 50px;
     z-index: 1;
 }
 
@@ -97,8 +113,8 @@
     text-transform: uppercase;
     font-size: 22px;
     font-weight: normal;
-    word-spacing: 20px;
-    line-height: 28px;
+    word-spacing: 18px;
+    line-height: 27px;
 }
 
 .bet-button {
@@ -107,14 +123,17 @@
     background: transparent;
     color: #fff;
     font-size: 22px;
+    font-family: Raleway, sans-serif;
     text-transform: uppercase;
 }
 
+/* Секция ЛОТЫ */
 .lots {
     margin-top: 180px;
 }
+
 .lots__heading {
-    margin-left: 40px;
+    margin-left: 65px;
     font-size: 40px;
     font-weight: bold;
     text-transform: uppercase;
@@ -123,71 +142,89 @@
 .lots__card-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    list-style: none;
+    grid-gap: 25px;
     padding: 0 24px;
-    color: #fff;
     margin-top: 27px;
-    gap: 25px;
+    list-style: none;
+    height: 100%;
 }
 
 .lots__card-list-item {
     position: relative;
-}
-
-.card-link {
-    margin: 30px 0 0 64px;
+    display: flex;
+    flex-direction: column;
+    flex-basis: 334px;
+    min-height: 61vh;
 }
 
 .card {
-    display: grid;
-    grid-template-rows: repeat(2, 1fr);
-    height: 50vh;
-    background-size: cover;
-    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
 }
 
-.card_type_film {
-    background-image: url("/images/card-lot-01.jpg");
-}
-
-.card_type_book {
-    background-image: url("/images/card-lot-02.jpg");
-}
-
-.card_type_picture {
-    background-image: url("/images/card-lot-03.jpg");
+.card-link {
+    text-decoration: none;
+    height: 100%;
 }
 
 .card__title {
     text-transform: uppercase;
     font-size: 22px;
     font-weight: bold;
-    padding: 24px 40px 0 40px;
+    text-decoration: underline;
+    color: #fff;
+    padding: 48px 40px 0;
     z-index: 1;
 }
 
 .card__text {
-    align-self: flex-end;
     font-size: 20px;
-    padding: 0 24px 24px 24px;
+    color: #fff;
+    padding: 0 40px 53px;
+    line-height: 120%;
     z-index: 1;
 }
 
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
+.card_type_book {
+    background-image: url("../images/card-lot-02.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
+.card_type_picture {
+    background-image: url("../images/card-lot-03.jpg");
+    background-size: cover;
+    background-position: center;
+    height: 100%;
+}
+
 .lots__look-more-link {
+    display: block;
+    padding: 27px 0 0 64px;
     font-size: 20px;
 }
 
+/* Секция ОБ АУКЦИОНЕ */
 .about {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    margin-top: 120px;
-    padding: 0 48px;
+    grid-template-columns: 1fr auto;
+    margin-top: 153px;
+    padding: 0 24px 0 70px;
 }
 
 .about__column {
-    position: relative;
-    top: 20%;
-    align-self: center;
+    padding: 0 0 0 70px;
+    margin-top: 13%;
 }
 
 .about__logo {
@@ -201,7 +238,7 @@
 }
 
 .about__logo-image {
-    width: 140px;
+    width: 142px;
 }
 
 .about__title {
@@ -211,27 +248,25 @@
 }
 
 .about__text {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
     font-size: 20px;
     margin-top: 100px;
+    line-height: 24px;
 }
 
-.about__text-align {
-    margin-top: 24px;
-}
-
+/* Секция FOOTER */
 .footer {
-    display: flex;
-    justify-content: space-between;
-    margin: 180px 0 82px 0;
-}
-
-.footer__address {
-    font-style: normal;
-    font-size: 18px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    margin: 180px 0 70px 0;
+    padding: 0 50px;
 }
 
 .footer__menu {
     display: flex;
+    justify-content: space-around;
 }
 
 .footer__menu-list {
@@ -246,6 +281,7 @@
 
 .footer__social-list {
     display: flex;
+    justify-content: flex-end;
     gap: 48px;
     list-style: none;
 }
