--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr auto 1fr;
     align-items: center;
     justify-items: stretch;
-    padding: 93px 0;
+    padding: 92px 0;
 }
 
 .header__menu {
@@ -53,6 +53,7 @@
 /* Секция ОНО ТЕБЕ НАДО */
 .cover {
     position: relative;
+    margin-top: 4px;
     background-image: url("../images/cover.jpg");
     background-size: cover;
     background-position: center;
@@ -70,29 +71,30 @@
 
 .cover__title {
     position: relative;
-    padding: 168px 50px 0;
+    padding: 165px 50px 0;
     text-transform: uppercase;
-    font-size: 6rem;
+    font-size: 100px;
     font-weight: bold;
     color: #fff;
-    letter-spacing: 35px;
+    letter-spacing: 30px;
     line-height: 115%;
     z-index: 1;
 }
 
 .cover__title-text {
     display: block;
+
 }
 
 .aligned-text_center {
     justify-self: center;
-    margin-top: 23px;
-    margin-left: 43px;
+    margin-top: 20px;
+    margin-left: 30px;
 }
 
 .aligned-text_right {
     justify-self: end;
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 .no-letter-spacing {
@@ -104,7 +106,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 110px 50px 53px 50px;
+    padding: 106px 50px 50px;
     z-index: 1;
 }
 
@@ -119,7 +121,7 @@
 
 .bet-button {
     border: 1px solid white;
-    padding: 10px 30px;
+    padding: 12px 31px;
     background: transparent;
     color: #fff;
     font-size: 22px;
@@ -130,21 +132,21 @@
 /* Секция ЛОТЫ */
 .lots {
     margin-top: 180px;
+    padding: 0 24px;
 }
 
 .lots__heading {
-    margin-left: 65px;
+    padding: 0 0 27px 40px;
     font-size: 40px;
     font-weight: bold;
     text-transform: uppercase;
 }
 
 .lots__card-list {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 25px;
-    padding: 0 24px;
-    margin-top: 27px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    justify-content: space-between;
     list-style: none;
     height: 100%;
 }
@@ -154,7 +156,7 @@
     display: flex;
     flex-direction: column;
     flex-basis: 334px;
-    min-height: 61vh;
+    min-height: 596px;
 }
 
 .card {
@@ -182,35 +184,32 @@
 .card__text {
     font-size: 20px;
     color: #fff;
-    padding: 0 40px 53px;
+    padding: 0 40px 48px;
     line-height: 120%;
     z-index: 1;
 }
 
-.card_type_film {
-    background-image: url("../images/card-lot-01.jpg");
+.card_type {
     background-size: cover;
     background-position: center;
     height: 100%;
+}
+
+.card_type_film {
+    background-image: url("../images/card-lot-01.jpg");
 }
 
 .card_type_book {
     background-image: url("../images/card-lot-02.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 100%;
 }
 
 .card_type_picture {
     background-image: url("../images/card-lot-03.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 100%;
 }
 
 .lots__look-more-link {
     display: block;
-    padding: 27px 0 0 64px;
+    padding: 30px 0 0 40px;
     font-size: 20px;
 }
 
@@ -218,30 +217,33 @@
 .about {
     display: grid;
     grid-template-columns: 1fr auto;
-    margin-top: 153px;
+    margin-top: 120px;
     padding: 0 24px 0 70px;
-}
-
-.about__column {
-    padding: 0 0 0 70px;
-    margin-top: 13%;
 }
 
 .about__logo {
     display: flex;
-    place-content: center;
+    justify-content: center;
+    align-items: center;
     background: #000;
     border: none;
     border-radius: 100%;
     width: 240px;
     height: 240px;
+    margin-top: 35px;
+}
+
+.about__column {
+    padding: 0 0 0 70px;
+    margin-top: 133px;
 }
 
 .about__logo-image {
-    width: 142px;
+    width: 148px;
 }
 
 .about__title {
+    padding: 3px 0 0 2px;
     text-transform: uppercase;
     font-weight: bold;
     font-size: 40px;
@@ -260,8 +262,8 @@
 .footer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    margin: 180px 0 70px 0;
-    padding: 0 50px;
+    margin-top: 180px;
+    padding: 0 50px 82px;
 }
 
 .footer__menu {
